--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,37 @@
 <div class="container">
-    <div class="content d-flex flex-column align-items-center justify-content-center">
-        <p>Hello <span class="text-warning" *ngIf="!profile?.last_name">{{profile?.email}}</span> <span class="text-warning" *ngIf="profile?.last_name">{{profile?.first_name}} {{profile?.last_name}}</span>!</p>
-        <div class="display-6">
-            Welcome to UMS
-        </div>
-        <br>
-        <a routerLink="../profile" *ngIf="!profile?.last_name">Your account is not yet completed, click here to complete your profile!</a>
-    </div>
+  <div
+    class="content d-flex flex-column align-items-center justify-content-center"
+  >
+    <p>
+      Hello
+      <span class="text-warning" *ngIf="!profile?.last_name">{{
+        profile?.email
+      }}</span>
+      <span class="text-warning" *ngIf="profile?.last_name"
+        >{{ profile?.first_name }} {{ profile?.last_name }}</span
+      >!
+    </p>
+    <div class="display-6">Welcome to UMS</div>
+    <br />
+    <a routerLink="../profile" *ngIf="!profile?.last_name"
+      >Your account is not yet completed, click here to complete your
+      profile!</a
+    >
+
+    <span
+      class="s-verified text-danger status"
+      *ngIf="profile?.verification_status == 'UNVERIFIED'"
+      >Your Account is Unverified</span
+    >
+    <span
+      class="s-verified status"
+      *ngIf="profile?.verification_status == 'VERIFIED'"
+      >Your Account is Verified</span
+    >
+    <span
+      class="s-verified text-warning status"
+      *ngIf="profile?.verification_status == 'PENDING VERIFICATION'"
+      >Your Account is Pending for Verification</span
+    >
+  </div>
 </div>
