--- a/src/app/pages/modal/user-form/user-form.component.html
+++ b/src/app/pages/modal/user-form/user-form.component.html
@@ -7,22 +7,45 @@
   <form [formGroup]="userForm">
     <div class="row">
       <div class="col-md-6 form-group pt-2">
-        <label for="first_name" class="p-1">First Name: <span class="red-color">*</span></label>
-        <input type="text" class="form-control" id="first_name" formControlName="first_name">
+        <label for="first_name" class="p-1"
+          >First Name: <span class="red-color">*</span></label
+        >
+        <input
+          type="text"
+          class="form-control"
+          id="first_name"
+          formControlName="first_name"
+        />
       </div>
       <div class="col-md-6 form-group pt-2">
-        <label for="last_name" class="p-1">Last Name: <span class="red-color">*</span></label>
-        <input type="text" class="form-control" id="last_name" formControlName="last_name">
+        <label for="last_name" class="p-1"
+          >Last Name: <span class="red-color">*</span></label
+        >
+        <input
+          type="text"
+          class="form-control"
+          id="last_name"
+          formControlName="last_name"
+        />
       </div>
     </div>
     <div class="row">
       <div class="col-md-6 form-group pt-2">
-        <label for="email" class="p-1">Email: <span class="red-color">*</span></label>
-        <input type="email" class="form-control" id="email" formControlName="email">
+        <label for="email" class="p-1"
+          >Email: <span class="red-color">*</span></label
+        >
+        <input
+          type="email"
+          class="form-control"
+          id="email"
+          formControlName="email"
+        />
       </div>
 
       <div class="col-md-6 form-group pt-2">
-        <label for="gender" class="p-1">Gender: <span class="red-color">*</span></label>
+        <label for="gender" class="p-1"
+          >Gender: <span class="red-color">*</span></label
+        >
         <select class="form-control" id="gender" formControlName="gender">
           <option value="MALE">Male</option>
           <option value="FEMALE">Female</option>
@@ -32,12 +55,25 @@
 
     <div class="row">
       <div class="col-md-6 form-group pt-2">
-        <label for="birthdate" class="p-1">Birthdate: <span class="red-color">*</span></label>
-        <input type="date" class="form-control" id="birthdate" formControlName="birthdate">
+        <label for="birthdate" class="p-1"
+          >Birthdate: <span class="red-color">*</span></label
+        >
+        <input
+          type="date"
+          class="form-control"
+          id="birthdate"
+          formControlName="birthdate"
+        />
       </div>
       <div class="col-md-6 form-group pt-2">
-        <label for="marital_status" class="p-1" >Marital Status: <span class="red-color">*</span></label>
-        <select class="form-control" id="marital_status" formControlName="marital_status">
+        <label for="marital_status" class="p-1"
+          >Marital Status: <span class="red-color">*</span></label
+        >
+        <select
+          class="form-control"
+          id="marital_status"
+          formControlName="marital_status"
+        >
           <option [value]="'SINGLE'">Single</option>
           <option [value]="'MARRIED'">Married</option>
           <option [value]="'DIVORCED'">Divorced</option>
@@ -48,28 +84,52 @@
     <div class="row">
       <div class="col-md-6 form-group pt-2">
         <label for="nationality" class="p-1">Nationality:</label>
-        <select class="form-control" id="marital_status" formControlName="nationality">
-          <option *ngFor="let item of countries" [value]="item?.isoCode">{{item?.name}}</option>
+        <select
+          class="form-control"
+          id="marital_status"
+          formControlName="nationality"
+        >
+          <option *ngFor="let item of countries" [value]="item?.isoCode">
+            {{ item?.name }}
+          </option>
         </select>
       </div>
       <div class="col-md-6 form-group pt-2">
         <label for="nid_number" class="p-1">NID Number:</label>
-        <input type="text" class="form-control" id="nid_number" formControlName="nid_number">
+        <input
+          type="text"
+          class="form-control"
+          id="nid_number"
+          formControlName="nid_number"
+        />
       </div>
     </div>
     <div class="row">
       <div class="col-md-6 form-group pt-2">
-        <label for="birthdate" class="p-1">Phone Number: <span class="red-color">*</span></label>
-        <input type="tel" class="form-control" id="birthdate" formControlName="phone_number">
+        <label for="birthdate" class="p-1"
+          >Phone Number: <span class="red-color">*</span></label
+        >
+        <input
+          type="tel"
+          class="form-control"
+          id="birthdate"
+          formControlName="phone_number"
+        />
       </div>
     </div>
   </form>
   <div class="alert alert-danger mt-1 p-2" role="alert" *ngIf="errorMsg">
-    {{errorMsg}}
+    {{ errorMsg }}
   </div>
 </div>
 <div class="modal-footer">
   <div class="w-100 text-end">
-    <button class="btn btn-primary w-10" (click)="onSubmit()">Update Account</button>
+    <button class="btn btn-primary" (click)="onSubmit()">Update Account</button>
+    <button
+      class="btn btn-danger ms-3 text-danger bg-transparent"
+      (click)="ref.close()"
+    >
+      Close
+    </button>
   </div>
 </div>
