--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -1,88 +1,89 @@
 .card {
-    width: 100% !important; 
-    // height: 30vh !important;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
+  width: 100% !important;
+  // height: 30vh !important;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
 
-  p{
-    margin-bottom: 0px !important;
-  }
-  
-  .card-img-top {
-    border-radius: 50%;
-    width: 100px !important;
-    height: auto;
-  }
-  
-  .card-title {
-    margin-bottom: 0;
-  }
+p {
+  margin-bottom: 0px !important;
+}
 
-  .flex-grow-1{
-    text-align: left !important;
-  }
-  
-  .card-text {
-    margin-bottom: 5px;
-  }
-  
-  .btn-primary {
-    width: 100%;
-    background-color: #007bff;
-    border-color: #007bff;
-  }
-  
-  .btn-primary:hover {
-    background-color: #0062cc;
-    border-color: #005cbf;
-  }
-  
-  .btn-primary:focus,
-  .btn-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
-  }
-  
+.update-profile {
+  width: 200px !important;
+  margin: 2px auto;
+}
 
-  ul.nav-tabs.nav-tabs-custom.nav {
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
-  }
+.card-img-top {
+  border-radius: 50%;
+  width: 100px !important;
+  height: auto;
+}
 
-  .s-verified{
-    background-color: rgb(237, 237, 237);
-    border-radius: 20px !important;
-    color: green;
-    font-size: 13px !important;
-    padding: 2px !important;
-  }
+.card-title {
+  margin-bottom: 0;
+}
 
-  
-  
-  .profile-picture{
-    width: 80px;
-    height: 80px;
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .profile-picture:hover {
-    opacity: 1;
-  }
+.flex-grow-1 {
+  text-align: left !important;
+}
 
-  
-  .custom-file-upload {
-    cursor: pointer;
-    padding: 3px;
-    background-color: #f1f1f1;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-weight: bold;
-    font-size: 14px;
-    color: #333;
-  }
-  
-  #file-upload {
-    display: none;
-  }
+.card-text {
+  margin-bottom: 5px;
+}
+
+.btn-primary {
+  width: 100%;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-primary:hover {
+  background-color: #0062cc;
+  border-color: #005cbf;
+}
+
+.btn-primary:focus,
+.btn-primary.focus {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+}
+
+ul.nav-tabs.nav-tabs-custom.nav {
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+}
+
+.s-verified {
+  background-color: rgb(237, 237, 237);
+  border-radius: 20px !important;
+  color: green;
+  font-size: 13px !important;
+  padding: 2px !important;
+}
+
+.profile-picture {
+  width: 80px;
+  height: 80px;
+  background-size: cover;
+  background-position: center;
+}
+
+.profile-picture:hover {
+  opacity: 1;
+}
+
+.custom-file-upload {
+  cursor: pointer;
+  padding: 3px;
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #333;
+}
+
+#file-upload {
+  display: none;
+}
